# xmonad-config

./: CLAUDE.md  LICENSE  README.md  justfile  xmonad-config.cabal
nix/modules/flake/: devshell.nix  haskell.nix  pre-commit.nix
src/: Main.hs  xmobar.hs  xmonad.hs
src/XMonadConfig/: GruvboxMaterial.hs
